# ML-Zoomcamp-FINAL-CAPSTONE-PROJECT

./: .dockerignore  .gitignore  Dockerfile  EDA.ipynb  ModelBuildNotebook.ipynb  README.md  main.py  pyproject.toml
.ipynb_checkpoints/: EDA-checkpoint.ipynb  ModelBuildNotebook-checkpoint.ipynb
app/: best_model_nn.keras  main.py  scaler.joblib  schema.py
dataset/: stackoverflow_prepared.csv
